implementação sse
